Added the cosmology project page (and required assets)

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <li>In the process of developing a <a href="https://github.com/Esraaj-Sarkar-Gupta/cosmological_model-multinesting" target="_blank">PyMultiNest framework</a> for various cosmological models, capable of working with multiple cosmological datasets.</li>
                     <li>Studied relevant prerequitises (Bayesian Inference, basics of Semi-Riemannian Geometry, General Relativity, and cosmological terms). Built familiarity with relevant frameworks such as the Cosmic Linear Anisotropy Solving System (CLASS).</li>
 
-                    <a href="#" class="project-link">Read More &rarr;</a>
+                    <a href="cosmology.html" class="project-link">Read More &rarr;</a>
                 </ul>
             </div>
 
@@ -135,7 +135,7 @@
                 <h4>Quantum Information Research Group</h4>
                 <ul class="job-details">
                     <li>Worked under <a href="https://physics.iitm.ac.in/people/facultyinfo/vaibhavmadhok.html" target="_blank">Professor Vaibhav Madhok</a> in the Quantum Information Research Group within the <a href="https://physics.iitm.ac.in/" target="_blank">Physics Department of IITM</a>.</li>
-                    <li>I extensively studied the Aharonov-Bohm Effect and its non-local behaviour. My work primarily focused on <a href="https://arxiv.org/abs/1110.6169" target="https://home.iitm.ac.in/mssiva/">L. Vaidman's</a> argument for the localization of the effect using quantised charges.</li>
+                    <li>I extensively studied the Aharonov-Bohm Effect and its non-local behaviour. My work primarily focused on <a href="https://arxiv.org/abs/1110.6169" target="_blank">L. Vaidman's</a> argument for the localization of the effect using quantised charges.</li>
                     <a href="assets/pdfs/Aharonov_Bohm_Effect_Report.pdf" class="project-link" target="_blank" rel="noopener noreferrer">View Project Report &rarr;</a><br>
                     <a href="Aharonov_Bohm_Effect_Project.html" class="project-link">More about this Project &rarr;</a>
                 </ul>
@@ -184,7 +184,7 @@
                     <h3>Autonomous Sailboat for Envrionmental Monitoring</h3>
                     <p class="tech-stack">3D Modeling • C/C++ • Robotics</p>
                     <p>A fully autonmomous lower power robotic sailboat capable of carrying out <i>in situ</i> envrionmental measurements in large water bodies.</p>
-                    <a href="#" class="project-link">View Project &rarr;</a>
+                    <a href="#" class="project-link">View Project &rarr;</a><br>
                     <a href="#" class="project-link">Project Proposal &rarr;</a>
                 </div>
 
@@ -192,7 +192,7 @@
                     <h3>GaussianAdam</h3>
                     <p class="tech-stack">Python • Machine Learning</p>
                     <p>A stochastic sampling-based Adaptive Moment Estimation semi-global optimizer.</p>
-                    <a href="#" class="project-link">View Project &rarr;</a>
+                    <a href="#" class="project-link">View Project &rarr;</a><br>
                     <a href="#" class="project-link">View Report &rarr;</a>
                 </div>
             </div>
