Added the projects section (and related assets)

--- a/index.html
+++ b/index.html
@@ -184,16 +184,25 @@
                     <h3>Autonomous Sailboat for Envrionmental Monitoring</h3>
                     <p class="tech-stack">3D Modeling • C/C++ • Robotics</p>
                     <p>A fully autonmomous lower power robotic sailboat capable of carrying out <i>in situ</i> envrionmental measurements in large water bodies.</p>
-                    <a href="#" class="project-link">View Project &rarr;</a><br>
-                    <a href="#" class="project-link">Project Proposal &rarr;</a>
+                    <a href="assets/pdfs/ARSEM_Proposal.pdf" class="project-link" target="_blank"> View Project Proposal &rarr;</a>
                 </div>
 
                 <div class="card item-div project-card">
                     <h3>GaussianAdam</h3>
                     <p class="tech-stack">Python • Machine Learning</p>
                     <p>A stochastic sampling-based Adaptive Moment Estimation semi-global optimizer.</p>
-                    <a href="#" class="project-link">View Project &rarr;</a><br>
-                    <a href="#" class="project-link">View Report &rarr;</a>
+                    <a href="https://github.com/Esraaj-Sarkar-Gupta/GaussianAdam" class="project-link" target="_blank">View Github Repository &rarr;</a><br>
+                    <a href="assets/pdfs/GaussianAdam_Report.pdf" class="project-link" target="_blank">View Project Report &rarr;</a>
+                </div>
+            </div>
+            <!-- Grid for SapienAI -->
+            <div class="card-grid">
+                <div class="card item-div project-card">
+                    <h3>SapienAI</h3>
+                    <p class="tech-stack">Python • AI • Large Language Models (LLM) • Speech Analysis • Computer Vision • Sentiment Detection • Deep Learning</p>
+                    <p>Developed a multimodal AI model integrating LLMs for NLP, speech analysis, computer vision, and sentiment detection to enhance engineering students' public speaking skills through personalized, scalable feedback on verbal and non-verbal communication.</p>
+                    <p>This paper was published to the IEEE conference <a href="ieee-edusociety.org/event/conference/ieee-frontiers-education-conference-2025" target="_blank">Frontiers in Education, 2025</a> </p>
+                    <a href="https://arxiv.org/abs/2511.04995" class="project-link" target="_blank">View Publication on ArXiv &rarr;</a>
                 </div>
             </div>
         </section>
@@ -203,8 +212,8 @@
             
             <div class="card-grid">
                 <div class="card item-div">
-                    <h3>Example</h3>
-                    <p>Text</p>
+                    <h3></h3>
+                    <p></p>
                 </div>
             </div>
         </section>
