--- a/index.html
+++ b/index.html
@@ -91,25 +91,6 @@
         <section id="experience" class="large-section">
             <h2 class="section-title">03. Experience</h2>
 
-            <!-- TEMPLATE
-            <div class="card item-div">
-                <div class="card-header">
-                    <h3>Role</h3>
-                    <span class="company">Institute</span>
-                    <span class="date">DurationDate</span>
-                </div>
-                <h4>Entity</h4>
-                <ul class="job-details">
-                    <li>Pointer 0</li>
-                    <li>Pointer 1</li>
-                    <li>Pointer 2</li>
-
-                    <a href="#" class="project-link">Report Link &rarr;</a><br>
-                    <a href="#" class="project-link">Others Link &rarr;</a>
-                </ul>
-            </div> -->
-
-            <!-- Cosmology -->
             <div class="card item-div">
                 <div class="card-header">
                     <h3>Research Intern</h3>
@@ -117,15 +98,13 @@
                     <span class="date">August 2025 - Present</span>
                 </div>
                 <ul class="job-details">
-                    <li>Working under <a href="https://sites.google.com/site/sureshkumaryd/home" target="_blank">Professor Suresh Kumar</a> for the development and Bayesian Analysis of cosmological models.</li>
-                    <li>In the process of developing a <a href="https://github.com/Esraaj-Sarkar-Gupta/cosmological_model-multinesting" target="_blank">PyMultiNest framework</a> for various cosmological models, capable of working with multiple cosmological datasets.</li>
-                    <li>Studied relevant prerequitises (Bayesian Inference, basics of Semi-Riemannian Geometry, General Relativity, and cosmological terms). Built familiarity with relevant frameworks such as the Cosmic Linear Anisotropy Solving System (CLASS).</li>
-
+                    <li>Conducting Bayesian Analysis of cosmological models under the guidance of <a href="https://sites.google.com/site/sureshkumaryd/home" target="_blank">Professor Suresh Kumar</a>.</li>
+                    <li>Architecting a <a href="https://github.com/Esraaj-Sarkar-Gupta/cosmological_model-multinesting" target="_blank">PyMultiNest framework</a> to streamline the testing and comparison of various cosmological models against multiple datasets.</li>
+                    <li>Applying principles of Semi-Riemannian Geometry and General Relativity, utilizing frameworks such as the Cosmic Linear Anisotropy Solving System (CLASS).</li>
                     <a href="cosmology.html" class="project-link">Read More &rarr;</a>
                 </ul>
             </div>
 
-            <!-- Aharonov Bohm Effect -->
             <div class="card item-div">
                 <div class="card-header">
                     <h3>Summer Intern</h3>
@@ -134,14 +113,13 @@
                 </div>
                 <h4>Quantum Information Research Group</h4>
                 <ul class="job-details">
-                    <li>Worked under <a href="https://physics.iitm.ac.in/people/facultyinfo/vaibhavmadhok.html" target="_blank">Professor Vaibhav Madhok</a> in the Quantum Information Research Group within the <a href="https://physics.iitm.ac.in/" target="_blank">Physics Department of IITM</a>.</li>
-                    <li>I extensively studied the Aharonov-Bohm Effect and its non-local behaviour. My work primarily focused on <a href="https://arxiv.org/abs/1110.6169" target="_blank">L. Vaidman's</a> argument for the localization of the effect using quantised charges.</li>
+                    <li>Investigated the Aharonov-Bohm Effect and its non-local behaviour within the <a href="https://physics.iitm.ac.in/" target="_blank">Physics Department of IITM</a>.</li>
+                    <li>Focused research on <a href="https://arxiv.org/abs/1110.6169" target="_blank">L. Vaidman's argument</a> for the localization of the effect using quantised charges. Advisor: <a href="https://physics.iitm.ac.in/people/facultyinfo/vaibhavmadhok.html" target="_blank">Professor Vaibhav Madhok</a>.</li>
                     <a href="assets/pdfs/Aharonov_Bohm_Effect_Report.pdf" class="project-link" target="_blank" rel="noopener noreferrer">View Project Report &rarr;</a><br>
                     <a href="Aharonov_Bohm_Effect_Project.html" class="project-link">More about this Project &rarr;</a>
                 </ul>
             </div>
 
-            <!-- Shape Memory Alloys -->
             <div class="card item-div">
                 <div class="card-header">
                     <h3>Project Intern</h3>
@@ -150,9 +128,9 @@
                 </div>
                 <h4>Active Material Systems and Structures Lab</h4>
                 <ul class="job-details">
-                    <li>Worked under <a href="https://home.iitm.ac.in/mssiva/" target="_blank">Professor M. S. Sivakumar</a> in the Active Material Systems and Structures Lab in the <a href="https://www.iitm.ac.in/academics/departments/department-of-applied-mechanics" target="_blank">Department of Applied Mechanics and Biomedical Engineering at IITM</a>.</li>
-                    <li>Worked with <a href="https://en.wikipedia.org/wiki/Shape-memory_alloy">shape memory alloys</a>, in particular Nitinol, in an attempt to develop a sun-tracking solar panel without lenses and with significantly fewer moving parts than conventional sun-tracking solar panels.</li>
-                    <li>Picked up skills relevant to the field such as CAD Modeling (SolidWorks) and 3D printing, and the mathematical modeling of dynamic mechanical systems.</li>
+                    <li>Engineered a sun-tracking solar panel mechanism using <a href="https://en.wikipedia.org/wiki/Shape-memory_alloy">Shape Memory Alloys (Nitinol)</a> under <a href="https://home.iitm.ac.in/mssiva/" target="_blank">Professor M. S. Sivakumar</a>.</li>
+                    <li>Eliminated the need for lenses and conventional motors, significantly reducing moving parts compared to conventional tracking systems.</li>
+                    <li>Applied mathematical modeling for dynamic mechanical systems and utilized SolidWorks for component design and 3D printing.</li>
                     <a href="#" class="project-link" target="_blank">Report Link &rarr;</a><br>
                     <a href="#" class="project-link">View Abstract and Images &rarr;</a>
                 </ul>
@@ -166,15 +144,14 @@
                 </div>
                 <h4>Material Science Research Center</h4>
                 <ul class="job-details">
-                    <li>RSIC is a 6 week long program for a select number of class 12 students carried out by IIT Madras, CMI and PSBB Group of Schools annually. The program includes lectures from professors in IITM and CMI on a range of topics varying from mathematics, physical science, biology, etc.</li>
-                    <li>Alongside the lectures, students are given the opportunity to carry out a project under a professor in IIT Madras which they then present at the end of the program.</li>
-                    <li>I had the oppurtinuity to work under <a href="https://en.wikipedia.org/wiki/M._S._Ramachandra_Rao" target="_blank">Professor M.S. Ramachandra Rao</a> at the <a href="https://physics.iitm.ac.in/~msrrao" target="_blank">Material Science Research Center (MSRC)</a> at IITM.</li>
-                    <li>My project involved the synthesis and characterization of the 2D material graphene.</li>
-
+                    <li>Selected for the competitive Research Science Initiative (RSIC), a 6-week program by IITM, CMI, and PSBB Group of Schools.</li>
+                    <li>Synthesized and characterized the 2D material graphene at the <a href="https://physics.iitm.ac.in/~msrrao" target="_blank">Material Science Research Center (MSRC)</a>.</li>
+                    <li>Advisor: <a href="https://en.wikipedia.org/wiki/M._S._Ramachandra_Rao" target="_blank">Professor M.S. Ramachandra Rao</a>.</li>
                     <a href="assets/pdfs/2D_Materials_Report.pdf" class="project-link" target="_blank">Report Link &rarr;</a><br>
                     <a href="https://www.youtube.com/watch?v=PNF8CRRgv2g" class="project-link" target="_blank">Presentation Link &rarr;</a>
                 </ul>
             </div>
+        </section>
 
         <section id="projects" class="large-section">
             <h2 class="section-title">04. Projects</h2>
@@ -195,10 +172,9 @@
                     <a href="assets/pdfs/GaussianAdam_Report.pdf" class="project-link" target="_blank">View Project Report &rarr;</a>
                 </div>
             </div>
-            <!-- Grid for SapienAI -->
             <div class="card-grid">
                 <div class="card item-div project-card">
-                    <h3>SapienAI</h3>
+                    <h3>SapienAI [Publication]</h3>
                     <p class="tech-stack">Python • AI • Large Language Models (LLM) • Speech Analysis • Computer Vision • Sentiment Detection • Deep Learning</p>
                     <p>Developed a multimodal AI model integrating LLMs for NLP, speech analysis, computer vision, and sentiment detection to enhance engineering students' public speaking skills through personalized, scalable feedback on verbal and non-verbal communication.</p>
                     <p>This paper was published to the IEEE conference <a href="ieee-edusociety.org/event/conference/ieee-frontiers-education-conference-2025" target="_blank">Frontiers in Education, 2025</a> </p>
